...


    final public func addFakeData() {
        #if UITEST
            let data: [[String: Any]] = [
            ["id": 1,
             "name" : "test1",
             "description" : "description1",
             "thumbnail": [
                 "path":"http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784",
                 "extension":"jpg"
             ]],
            ["id": 2,
...
        ]
        LocalStorageLayer.shared.addRequest(key: "[\"offset\": 0]", value: data)
        LocalStorageLayer.shared.addRequest(key: "[\"offset\": 4]", value: [[String: Any]]())

        let dataSpider: [[String: Any]] = [
            ["id": 5,
             "name" : "spider1",
             "description" : "description1",
             "thumbnail": [
                 "path":"http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784",
                 "extension":"jpg"
             ]]
        ]
...
