...
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nxt-rZ-SV2" userLabel="HeaderView">
                    <rect key="frame" x="0.0" y="20" width="375" height="56"/>
                    <subviews>
                        <searchBar contentMode="redraw" placeholder="Search your superHero" translatesAutoresizingMaskIntoConstraints="NO" id="aiv-Ws-TXu">
                            <rect key="frame" x="0.0" y="0.0" width="316" height="56"/>
                            <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <textInputTraits key="textInputTraits" textContentType="name"/>
                            <connections>
                                <outlet property="delegate" destination="-1" id="bXX-kI-dWV"/>
                            </connections>
                        </searchBar>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SCA-x3-4Sz">
                            <rect key="frame" x="316" y="0.0" width="59" height="56"/>
                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                            <inset key="contentEdgeInsets" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
                            <state key="normal" title="Layout">
                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </state>
                        </button>
                    </subviews>
                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <constraints>
...
